[tool.poetry]
name = "2021-multi-group-piece"
version = "0.1.0"
description = ""
authors = ["Sam Greening <samjg60@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
pytest = "^6.2.3"
pytype = "^2021.4.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
